2010-03-06  Glenn Morris  <rgm@gnu.org>

	* cedet/semantic/grammar.el (semantic-grammar-header-template):
	Update template copyright to GPLv3+.

2010-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* man.el (Man-files-regexp): Tighten up the regexp (bug#5686).

2010-03-03  Chong Yidong  <cyd@stupidchicken.com>

	* macros.el (insert-kbd-macro): Look up keyboard macro using the
	definition, not the name (Bug#5481).

2010-03-03  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* subr.el (momentary-string-display): Don't overwrite the MESSAGE
	argument with a local variable.  (Bug#5670)

2010-03-02  Juri Linkov  <juri@jurta.org>

	* info.el (Info-index-next): Decrement line number by 2.  (Bug#5652)

2010-03-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-out-of-band): Fix an
	error when FILENAME and NEWNAME are existing remote directories.

	* net/tramp-compat.el (tramp-compat-make-temp-file): Add optional
	parameter DIR-FLAG.

2010-03-02  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-hebrew.el (holiday-hebrew-passover): Fix date
	of Yom HaAtzma'ut when it falls on a Monday (rule changed in 2004).

2010-03-01  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-remove-stale-state-cache):
	Correct previous patch.

2010-03-01  Kenichi Handa  <handa@m17n.org>

	* language/burmese.el (burmese-composable-pattern): Rename from
	myanmar-composable-pattern.

	* international/characters.el (script-list):
	* international/fontset.el (script-representative-chars):
	Change myanmar to burmese.
	(otf-script-alist): Likewise.
	(setup-default-fontset): Likewise.  Re-fix :otf spec.

2010-03-01  Alan Mackenzie  <bug-cc-mode@gnu.org>

	* cc-engine.el (c-remove-stale-state-cache): Take account of when
	`good-pos' is in the same macro as `here'.  Fixes bug 5649.

2010-02-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* menu-bar.el (menu-bar-manuals-menu): Fix typo.

2010-02-28  Jan Djärv  <jan.h.d@swipnet.se>
